# Muilt_API_Handler_Routes

./: README.md  pyproject.toml
muiltapi_routes/Routes/Configs/: __init__.py
multiapi_routes/Libs/: check.py
multiapi_routes/Libs/DB/: __init__.py
multiapi_routes/Routes/Configs/: __init__.py
multiapi_routes/Routes/Forward/: __init__.py
multiapi_routes/Routes/Froward/: __init__.py
multiapi_routes/Routes/Skeleton/: __init__.py
multiapi_routes/Routes/VirtualBond/: __init__.py
multiapi_routes/Routes/Wallet/: __init__.py
