[tool.poetry]
name = "multiapi-routes"
version = "0.1.0"
description = ""
authors = ["Vortex5Root"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
vauth = {git = "https://github.com/Vortex5Root/Redis_Auth.git"}
fastapi = "^0.103.2"
redis-om = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
